--- a/Persona4GoldenHelper/Pages/ExamAnswers.razor
+++ b/Persona4GoldenHelper/Pages/ExamAnswers.razor
@@ -58,7 +58,7 @@
     ** Protected Methods
     *********/
     /// <inheritdoc/>
-    protected override async Task OnInitializedAsync() => AllExamAnswers = await Http.GetFromJsonAsync<List<ExamAnswer>>("data/examanswers.json");
+    protected override async Task OnInitializedAsync() => AllExamAnswers = await Http.GetFromJsonAsync<List<ExamAnswer>>("data/exam-answers.json");
 
     
     /*********
