Fix alt attributes for darkness and electricity icons

--- a/Persona4GoldenHelper/Pages/Shadows.razor
+++ b/Persona4GoldenHelper/Pages/Shadows.razor
@@ -21,10 +21,10 @@
                 <th class="column-very-slim text-align-centre"><img src="images/physical.png" alt="Physical" /></th>
                 <th class="column-very-slim text-align-centre"><img src="images/fire.png" alt="Fire" /></th>
                 <th class="column-very-slim text-align-centre"><img src="images/ice.png" alt="Ice" /></th>
-                <th class="column-very-slim text-align-centre"><img src="images/electricity.png" alt="Electric" /></th>
+                <th class="column-very-slim text-align-centre"><img src="images/electricity.png" alt="Electricity" /></th>
                 <th class="column-very-slim text-align-centre"><img src="images/wind.png" alt="Wind" /></th>
                 <th class="column-very-slim text-align-centre"><img src="images/light.png" alt="Light" /></th>
-                <th class="column-very-slim text-align-centre"><img src="images/darkness.png" alt="Dark" /></th>
+                <th class="column-very-slim text-align-centre"><img src="images/darkness.png" alt="Darkness" /></th>
 	    	</HeaderRow>
             <ContentRow>
                 @{
