--- a/Persona4GoldenHelper/Pages/Accessories.razor
+++ b/Persona4GoldenHelper/Pages/Accessories.razor
@@ -7,7 +7,7 @@
     <h1>Accessories</h1>
     @if (SearchBox != null)
     {
-        <FilterableTable TContent=Accessory Content=AllAccessories SearchBox="SearchBox" IncludeTBodyTag=false>
+        <FilterableTable TContent=Accessory Content=AllAccessories SearchBox=SearchBox IncludeTBodyTag=false>
             <HeaderRow>
                 <th>Name</th>
                 <th>Effect</th>
