--- a/Persona4GoldenHelper/Pages/Lunches.razor
+++ b/Persona4GoldenHelper/Pages/Lunches.razor
@@ -7,7 +7,7 @@
     <h1>Lunches</h1>
     @if (SearchBox != null)
     {
-        <FilterableTable TContent=Lunch Content=AllLunches SearchBox="SearchBox">
+        <FilterableTable TContent=Lunch Content=AllLunches SearchBox=SearchBox>
             <HeaderRow>
                 <th class="column-slim text-align-centre">Name</th>
                 <th class="column-slim text-align-centre">Method</th>
