--- a/Persona4GoldenHelper/Pages/Plants.razor
+++ b/Persona4GoldenHelper/Pages/Plants.razor
@@ -7,7 +7,7 @@
     <h1>Plants</h1>
     @if (SearchBox != null)
     {
-        <FilterableTable TContent=Plant Content=AllPlants SearchBox="SearchBox" IncludeTBodyTag=false>
+        <FilterableTable TContent=Plant Content=AllPlants SearchBox=SearchBox IncludeTBodyTag=false>
             <HeaderRow>
                 <th class="text-align-centre">Available</th>
                 <th>Seedling Name</th>
