--- a/Persona4GoldenHelper/Pages/Quests.razor
+++ b/Persona4GoldenHelper/Pages/Quests.razor
@@ -7,7 +7,7 @@
     <h1>Quests</h1>
     @if (SearchBox != null)
     {
-        <FilterableTable TContent=Quest Content=AllQuests SearchBox="SearchBox">
+        <FilterableTable TContent=Quest Content=AllQuests SearchBox=SearchBox>
             <HeaderRow>
                 <th class="column-very-slim text-align-centre">Number</th>
                 <th>Title</th>
