--- a/Persona4GoldenHelper/Pages/Shadows.razor
+++ b/Persona4GoldenHelper/Pages/Shadows.razor
@@ -8,7 +8,7 @@
     <h1>Shadows</h1>
     @if (SearchBox != null && AllShadows != null)
     {
-        <FilterableTable TContent=FilterableKeyValuePair Content=GetDistinctShadows() SearchBox="SearchBox" IncludeTBodyTag=false>
+        <FilterableTable TContent=FilterableKeyValuePair Content=GetDistinctShadows() SearchBox=SearchBox IncludeTBodyTag=false>
             <HeaderRow>
                 <th>Name</th>
                 <th class="text-align-centre">Type</th>
