--- a/Persona4GoldenHelper/Pages/Skills.razor
+++ b/Persona4GoldenHelper/Pages/Skills.razor
@@ -7,7 +7,7 @@
     <h1>Skills</h1>
     @if (SearchBox != null)
     {
-        <FilterableTable TContent=Skill Content=AllSkills SearchBox="SearchBox">
+        <FilterableTable TContent=Skill Content=AllSkills SearchBox=SearchBox>
             <HeaderRow>
                 <th>Name</th>
                 <th>Effect</th>
