--- a/Persona4GoldenHelper/Pages/Personas.razor
+++ b/Persona4GoldenHelper/Pages/Personas.razor
@@ -7,7 +7,7 @@
     <h1>Personas</h1>
     @if (SearchBox != null)
     {
-        <FilterableTable TContent=Persona Content=AllPersonas SearchBox="SearchBox">
+        <FilterableTable TContent=Persona Content=AllPersonas SearchBox=SearchBox>
             <HeaderRow>
                 <th class="column-very-slim text-align-centre">Level</th>
                 <th>Name</th>
