--- a/Persona4GoldenHelper/Pages/ExamAnswers.razor
+++ b/Persona4GoldenHelper/Pages/ExamAnswers.razor
@@ -9,7 +9,7 @@
     {
         @foreach (var month in Enum.GetValues<Month>())
         {
-            <FilterableTable Header=@month.ToString() TContent=ExamAnswer Content=GetExamAnswersByMonth(month) SearchBox=SearchBox>
+            <FilterableTable Header=@month.ToString() TContent=ExamAnswer Content=GetExamAnswersByMonth(month) SearchBox=SearchBox ShowNoResultsText=false>
                 <HeaderRow>
                     <th class="text-align-centre">Date</th>
                     <th class="column-very-wide">Question</th>
