--- a/Persona4GoldenHelper/Pages/Weapons.razor
+++ b/Persona4GoldenHelper/Pages/Weapons.razor
@@ -9,7 +9,7 @@
     {
         @foreach (var user in Enum.GetValues<User>())
         {
-            <FilterableTable Header=@user.ToString() TContent=Weapon Content=GetWeaponsByUser(user) SearchBox=SearchBox IncludeTBodyTag=false>
+            <FilterableTable Header=@user.ToString() TContent=Weapon Content=GetWeaponsByUser(user) SearchBox=SearchBox IncludeTBodyTag=false ShowNoResultsText=false>
                 <HeaderRow>
                     <th>Name</th>
                     <th class="column-very-slim text-align-centre">Attack</th>
