Move "no results" text to a separate component

--- a/Persona4GoldenHelper/Pages/Armour.razor
+++ b/Persona4GoldenHelper/Pages/Armour.razor
@@ -44,7 +44,7 @@
     }
     @if (TableReferences.Count > 0 && !TableReferences.AnyHasResults)
     {
-        <h2>No results</h2>
+        <NoResults/>
     }
 </div>
 
