--- a/Persona4GoldenHelper/Pages/SkillCards.razor
+++ b/Persona4GoldenHelper/Pages/SkillCards.razor
@@ -57,7 +57,7 @@
     @if (SkillCardTableReferences.Count > 0 && !SkillCardTableReferences.AnyHasResults
         && SkillCardTableReferences.Count > 0 && !SkillCardLocationTableReferences.AnyHasResults)
     {
-        <h2>No results</h2>
+        <NoResults/>
     }
 </div>
 
