--- a/Persona4GoldenHelper/Pages/ExamAnswers.razor
+++ b/Persona4GoldenHelper/Pages/ExamAnswers.razor
@@ -27,7 +27,7 @@
     }
     @if (TableReferences.Count > 0 && !TableReferences.AnyHasResults)
     {
-        <h2>No results</h2>
+        <NoResults/>
     }
 </div>
 
