--- a/Persona4GoldenHelper/Pages/Weapons.razor
+++ b/Persona4GoldenHelper/Pages/Weapons.razor
@@ -43,7 +43,7 @@
     }
     @if (TableReferences.Count > 0 && !TableReferences.AnyHasResults)
     {
-        <h2>No results</h2>
+        <NoResults/>
     }
 </div>
 
