--- a/Persona4GoldenHelper/Pages/Personas.razor
+++ b/Persona4GoldenHelper/Pages/Personas.razor
@@ -7,7 +7,7 @@
     <h1>Personas</h1>
     @if (SearchBox != null)
     {
-        <FilterableTable TContent=Persona Content=AllPersonas SearchBox=SearchBox>
+        <FilterableTable TContent=Models.Persona Content=AllPersonas SearchBox=SearchBox>
             <HeaderRow>
                 <th class="column-very-slim text-align-centre">Level</th>
                 <th>Name</th>
@@ -28,7 +28,7 @@
             <ContentRow>
                 <tr class="alternate-colour">
                     <td class="text-secondary text-align-centre">@context.Level</td>
-                    <td><a class="@(context.IsUltimate ? "persona-type-ultimate" : context.IsNewGamePlus ? "persona-type-new-game" : "")" href="/personas/@context.Name">@context.Name</a></td>
+                    <td><a class="@(context.IsUltimate ? "persona-type-ultimate" : context.IsNewGamePlus ? "persona-type-new-game" : "")" href="/personas/@context.Name.ToLower()">@context.Name</a></td>
                     <td class="text-secondary">@context.Arcana</td>
                     <td class="text-secondary text-align-centre">@context.Stats.Strength</td>
                     <td class="text-secondary text-align-centre">@context.Stats.Magic</td>
@@ -56,7 +56,7 @@
     private SearchBox _SearchBox;
 
     /// <summary>All the personas to display.</summary>
-    private List<Persona> AllPersonas;
+    private List<Models.Persona> AllPersonas;
 
     
     /*********
@@ -78,5 +78,5 @@
     ** Protected Methods
     *********/
     /// <inheritdoc/>
-    protected override async Task OnInitializedAsync() => AllPersonas = await Http.GetFromJsonAsync<List<Persona>>("data/personas.json");
+    protected override async Task OnInitializedAsync() => AllPersonas = await Http.GetFromJsonAsync<List<Models.Persona>>("data/personas.json");
 }
