Style "Loading..." text for pages and tables

--- a/Persona4GoldenHelper/wwwroot/css/app.css
+++ b/Persona4GoldenHelper/wwwroot/css/app.css
@@ -161,6 +161,12 @@ img {
 /*********
 ** General Styles
 *********/
+.loading {
+    color: var(--text-colour-primary);
+    font-weight: bold;
+    text-align: center;
+}
+
 .text-align-centre {
     text-align: center;
 }
