--- a/Persona4GoldenHelper/App.razor
+++ b/Persona4GoldenHelper/App.razor
@@ -4,7 +4,7 @@
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
+            <h2 class="text-align-centre text-error">No page could be found</h2>
         </LayoutView>
     </NotFound>
 </Router>
