--- a/Persona4GoldenHelper/_Imports.razor
+++ b/Persona4GoldenHelper/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Persona4GoldenHelper.Components
+@using Persona4GoldenHelper.Extensions
 @using Persona4GoldenHelper.Models
 @using Persona4GoldenHelper.Shared
